added dependency for HeatPump; added policy for properties